--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -8,16 +8,20 @@
         </a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item" sec:authorize="hasAuthority('ADMIN')">
+                <li class="nav-item" sec:authorize="hasAuthority('ADMIN')"
+                    th:classappend="${#httpServletRequest.getRequestURI() == '/trainerusers' ? 'active' : ''}">
                     <a class="nav-link" th:href="@{/trainerusers}">Prowadzący</a>
                 </li>
-                <li class="nav-item" sec:authorize="hasAuthority('ADMIN')">
+                <li class="nav-item" sec:authorize="hasAuthority('ADMIN')"
+                    th:classappend="${#httpServletRequest.getRequestURI() == '/studentusers' ? 'active' : ''}">
                     <a class="nav-link" th:href="@{/studentusers}">Uczestnicy</a>
                 </li>
-                <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN','TRAINER')">
+                <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN','TRAINER')"
+                    th:classappend="${#httpServletRequest.getRequestURI() == '/trainings' ? 'active' : ''}">
                     <a class="nav-link" th:href="@{/trainings}">Kursy</a>
                 </li>
-                <li class="nav-item" sec:authorize="hasAuthority('ADMIN')">
+                <li class="nav-item" sec:authorize="hasAuthority('ADMIN')"
+                    th:classappend="${#httpServletRequest.getRequestURI() == '/applications' ? 'active' : ''}">
                     <a class="nav-link" th:href="@{/applications}">Aplikacje</a>
                 </li>
             </ul>
@@ -27,7 +31,6 @@
         <span class="navbar-text mr-2">
             <b sec:authentication="name">Login</b>
             <i sec:authentication="principal.authorities">[USER], [TRAINER], [ADMIN]</i>
-
         </span>
         <button class="btn btn-outline-primary" type="submit">Wyloguj</button>
     </form>
