Clean up code after code review of PM - changed names of methods in mappers - changed some fields names - moved mapping booleans to strings to thymeleaf templates - rm unused constructors - added Optional to findByLogin method in user repo - unified names in controllers

--- a/src/main/resources/templates/addtraineruser.html
+++ b/src/main/resources/templates/addtraineruser.html
@@ -13,7 +13,7 @@
 
 <h3>Dodaj nowego prowadzącego:</h3>
 <div class="form">
-    <form method="post" th:action="@{/addtraineruser}" th:object="${traineruserdto}">
+    <form method="post" th:action="@{/addtraineruser}" th:object="${trainerUserDto}">
         <div class="form-group row">
             <label class="col-sm-2 col-form-label" for="loginInput">Nazwa użtkownika:</label>
             <div class="col-sm-10">
