--- a/src/main/resources/templates/training.html
+++ b/src/main/resources/templates/training.html
@@ -6,7 +6,7 @@
 <div class="content">
     <h3>Edycja kursu:</h3>
     <div class="form">
-        <form method="post" th:action="@{/training/update/{id}(id=${trainingdto.id})}" th:object="${trainingdto}">
+        <form method="post" th:action="@{/training/update/{id}(id=${trainingDto.id})}" th:object="${trainingDto}">
             <div class="form-group row">
                 <label class="col-sm-2 col-form-label" for="nameInput">Nazwa kursu:</label>
                 <div class="col-sm-10">
