Added logger - added logging to file tms.log - added some info and error logs - fixed issue with possibility to delete admin user - added scheduler to make random applies - fixed issue during save to repo application - fixed bug witch login / logout button when user is logged in

--- a/src/main/resources/templates/applyfortraining.html
+++ b/src/main/resources/templates/applyfortraining.html
@@ -22,7 +22,19 @@
             </ul>
         </div>
     </nav>
-    <a class="btn btn-outline-primary" th:href="@{/login}" role="button">Zaloguj się</a>
+
+    <a sec:authorize="!isAuthenticated()" class="btn btn-outline-primary" th:href="@{/login}"
+       role="button">Zaloguj się</a>
+
+    <form sec:authorize="isAuthenticated()" class="form-inline" th:action="@{/logout}" method="post">
+        <span class="navbar-text mr-2">
+            <b sec:authentication="name">Login</b>
+            <i sec:authentication="principal.authorities">[USER], [TRAINER], [ADMIN]</i>
+        </span>
+        <button class="btn btn-outline-primary" type="submit">Wyloguj</button>
+    </form>
+
+
 </nav>
 
 <div class="content">
