--- a/src/main/resources/templates/applyfortraining.html
+++ b/src/main/resources/templates/applyfortraining.html
@@ -41,34 +41,47 @@
     <div class="reg_form_wrapper">
         <h2 class="text-center">Zapisz się na szkolenie:</h2>
         <div class="form">
-            <form method="post" th:action="@{/applyfortraining}" th:object="${trainingApplicationDto}">
+            <form class="needs-validation" novalidate method="post" th:action="@{/applyfortraining}" th:object="${trainingApplicationDto}">
                 <div class="form-group row">
                     <label class="col-sm-4 col-form-label" for="trainingSelect">Wybierz kurs:</label>
                     <div class="col-sm-8">
-                        <select class="form-control" id="trainingSelect" th:field="*{trainingId}">
+                        <select class="form-control" id="trainingSelect" th:field="*{trainingId}"th:required="required">
                             <option th:each="training : ${listOfAllTrainings}" th:value="${training.id}"
                                     th:text="${training.name}"></option>
                         </select>
+                        <div class="invalid-feedback">
+                            Wprowadź kurs z listy.
+                        </div>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-sm-4 col-form-label" for="loginInput">Nazwa użtkownika:</label>
                     <div class="col-sm-8">
-                        <input class="form-control" id="loginInput" type="text" th:field="*{studentUserDTO.login}">
+                        <input class="form-control" id="loginInput" type="text" th:field="*{studentUserDTO.login}"
+                               th:required="required">
+                        <div class="invalid-feedback">
+                            Wprowadź nazwę użytkownika.
+                        </div>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-sm-4 col-form-label" for="passwordInput">Hasło:</label>
                     <div class="col-sm-8">
                         <input class="form-control" id="passwordInput" type="password"
-                               th:field="*{studentUserDTO.password}">
+                               th:field="*{studentUserDTO.password}" th:required="required">
+                        <div class="invalid-feedback">
+                            Wprowadź hasło.
+                        </div>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-sm-4 col-form-label" for="firstNameInput">Imię:</label>
                     <div class="col-sm-8">
                         <input class="form-control" id="firstNameInput" type="text"
-                               th:field="*{studentUserDTO.firstName}">
+                               th:field="*{studentUserDTO.firstName}" th:required="required">
+                        <div class="invalid-feedback">
+                            Wprowadź imię.
+                        </div>
                     </div>
                 </div>
                 <div class="form-group row">
@@ -76,6 +89,9 @@
                     <div class="col-sm-8">
                         <input class="form-control" id="lastNameInput" type="text"
                                th:field="*{studentUserDTO.lastName}">
+                        <div class="invalid-feedback">
+                            Wprowadź nazwisko.
+                        </div>
                     </div>
                 </div>
                 <div class="form-group row text-right">
