--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,6 +23,26 @@
         }
     </style>
     <link th:rel="stylesheet" th:href="@{/styles/signin.css}"/>
+    <script>
+        // Example starter JavaScript for disabling form submissions if there are invalid fields
+        (function() {
+            'use strict';
+            window.addEventListener('load', function() {
+                // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                var forms = document.getElementsByClassName('needs-validation');
+                // Loop over them and prevent submission
+                var validation = Array.prototype.filter.call(forms, function(form) {
+                    form.addEventListener('submit', function(event) {
+                        if (form.checkValidity() === false) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                        }
+                        form.classList.add('was-validated');
+                    }, false);
+                });
+            }, false);
+        })();
+    </script>
 </head>
 <body class="text-center d-flex flex-column h-100">
 <nav th:fragment="nav" class="navbar sticky-top navbar-light bg-light">
@@ -41,7 +61,7 @@
     <a class="btn btn-outline-primary" th:href="@{/applyfortraining}" role="button">Zarejestruj się</a>
 </nav>
 
-<form class="form-signin" name="f" th:action="@{/login}" method="post">
+<form class="form-signin needs-validation" novalidate name="f" th:action="@{/login}" method="post">
     <img class="mb-4" src="/img/tms-logo_200x200.png" alt="" width="72" height="72">
     <h1 class="h3 mb-3 font-weight-normal">Logowanie</h1>
     <div th:if="${param.error}" class="alert alert-danger" role="alert">
