--- a/src/main/resources/templates/studentusers.html
+++ b/src/main/resources/templates/studentusers.html
@@ -6,31 +6,48 @@
 <div th:replace="fragments/modal :: modal(~{::#reg_form},'Dodawanie nowego uczestnika')">
     <div id="reg_form">
         <div class="form">
-            <form method="post" th:action="@{/studentusers}" th:object="${studentUserDto}">
+            <form class="needs-validation" novalidate method="post" th:action="@{/studentusers}"
+                  th:object="${studentUserDto}">
                 <div class="modal-body">
 
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label" for="loginInput">Nazwa użtkownika:</label>
                         <div class="col-sm-8">
-                            <input class="form-control" id="loginInput" type="text" th:field="*{login}">
+                            <input class="form-control" id="loginInput" type="text" th:field="*{login}"
+                                   th:required="required">
+                            <div class="invalid-feedback">
+                                Wprowadź nazwę użytkownika.
+                            </div>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label" for="passwordInput">Hasło:</label>
                         <div class="col-sm-8">
-                            <input class="form-control" id="passwordInput" type="password" th:field="*{password}">
+                            <input class="form-control" id="passwordInput" type="password" th:field="*{password}"
+                                   th:required="required">
+                            <div class="invalid-feedback">
+                                Wprowadź hasło.
+                            </div>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label" for="firstNameInput">Imię:</label>
                         <div class="col-sm-8">
-                            <input class="form-control" id="firstNameInput" type="text" th:field="*{firstName}">
+                            <input class="form-control" id="firstNameInput" type="text" th:field="*{firstName}"
+                                   th:required="required">
+                            <div class="invalid-feedback">
+                                Wprowadź imię.
+                            </div>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label" for="lastNameInput">Nazwisko:</label>
                         <div class="col-sm-8">
-                            <input class="form-control" id="lastNameInput" type="text" th:field="*{lastName}">
+                            <input class="form-control" id="lastNameInput" type="text" th:field="*{lastName}"
+                                   th:required="required">
+                            <div class="invalid-feedback">
+                                Wprowadź nazwisko.
+                            </div>
                         </div>
                     </div>
                 </div>
