--- a/src/main/resources/templates/trainerusers.html
+++ b/src/main/resources/templates/trainerusers.html
@@ -6,40 +6,57 @@
 <div th:replace="fragments/modal :: modal(~{::#reg_form},'Dodawanie nowego prowadzącego')">
     <div id="reg_form">
         <div class="form">
-            <form method="post" th:action="@{/trainerusers}" th:object="${trainerUserDto}">
+            <form class="needs-validation" novalidate method="post" th:action="@{/trainerusers}" th:object="${trainerUserDto}">
                 <div class="modal-body">
 
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label" for="loginInput">Nazwa użtkownika:</label>
                         <div class="col-sm-8">
-                            <input class="form-control" id="loginInput" type="text" th:field="*{login}">
+                            <input class="form-control" id="loginInput" type="text" th:field="*{login}" th:required="required">
+                            <div class="invalid-feedback">
+                                Wprowadź nazwę użytkownika.
+                            </div>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label" for="passwordInput">Hasło:</label>
                         <div class="col-sm-8">
-                            <input class="form-control" id="passwordInput" type="password" th:field="*{password}">
+                            <input class="form-control" id="passwordInput" type="password" th:field="*{password}" th:required="required">
+                            <div class="invalid-feedback">
+                                Wprowadź hasło.
+                            </div>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label" for="firstNameInput">Imię:</label>
                         <div class="col-sm-8">
-                            <input class="form-control" id="firstNameInput" type="text" th:field="*{firstName}" required>
+                            <input class="form-control" id="firstNameInput" type="text" th:field="*{firstName}" th:required="required">
+                            <div class="invalid-feedback">
+                                Wprowadź imię.
+                            </div>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label" for="lastNameInput">Nazwisko:</label>
                         <div class="col-sm-8">
-                            <input class="form-control" id="lastNameInput" type="text" th:field="*{lastName}">
+                            <input class="form-control" id="lastNameInput" type="text" th:field="*{lastName}"
+                                   th:required="required">
+                            <div class="invalid-feedback">
+                                Wprowadź nazwisko.
+                            </div>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label" for="isActiveSelect">Aktywność konta:</label>
                         <div class="col-sm-8">
-                            <select class="form-control" id="isActiveSelect" th:field="*{isActive}">
-                                <option th:value="true" selected>Aktywne</option>
+                            <select class="form-control" id="isActiveSelect" th:field="*{isActive}"
+                                    th:required="required">
+                                <option th:value="true">Aktywne</option>
                                 <option th:value="false">Nieaktywne</option>
                             </select>
+                            <div class="invalid-feedback">
+                                Wybierz prawidłową opcję z listy.
+                            </div>
                         </div>
                     </div>
                 </div>
