Some fixes, optimalisation and improvements - improved formatting - optimized imports - fixed validation - improved mapper trainingaplication toEntity

--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -3,7 +3,8 @@
 <nav th:fragment="nav" class="navbar sticky-top navbar-light bg-light">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" th:href="@{/}" title="Training Management System">
-            <img src="/img/tms-logo_200x200.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+            <img src="/img/tms-logo_200x200.png" width="30" height="30" class="d-inline-block align-top" alt=""
+                 loading="lazy">
             TMS - Training Management System
         </a>
         <div class="collapse navbar-collapse" id="navbarNav">
