--- a/src/main/resources/templates/applyfortraining.html
+++ b/src/main/resources/templates/applyfortraining.html
@@ -8,6 +8,26 @@
     <script th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
     <script th:src="@{/webjars/popper.js/1.16.0/umd/popper.min.js}"></script>
     <script th:src="@{/webjars/bootstrap/4.5.3/js/bootstrap.min.js}"></script>
+    <script>
+        // Example starter JavaScript for disabling form submissions if there are invalid fields
+        (function () {
+            'use strict';
+            window.addEventListener('load', function () {
+                // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                var forms = document.getElementsByClassName('needs-validation');
+                // Loop over them and prevent submission
+                var validation = Array.prototype.filter.call(forms, function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (form.checkValidity() === false) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                        }
+                        form.classList.add('was-validated');
+                    }, false);
+                });
+            }, false);
+        })();
+    </script>
 </head>
 <body>
 <nav class="navbar sticky-top navbar-light bg-light">
@@ -90,7 +110,7 @@
                     <label class="col-sm-4 col-form-label" for="lastNameInput">Nazwisko:</label>
                     <div class="col-sm-8">
                         <input class="form-control" id="lastNameInput" type="text"
-                               th:field="*{studentUserDTO.lastName}">
+                               th:field="*{studentUserDTO.lastName}" th:required="required">
                         <div class="invalid-feedback">
                             Wprowadź nazwisko.
                         </div>
