--- a/src/main/resources/templates/fragments/modal.html
+++ b/src/main/resources/templates/fragments/modal.html
@@ -7,24 +7,25 @@
 </button>
 
 <!-- Modal -->
-    <div th:fragment="modal(reg_form,title)" class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false"
-         tabindex="-1"
-         aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div th:fragment="modal(reg_form,title)" class="modal fade" id="staticBackdrop" data-backdrop="static"
+     data-keyboard="false"
+     tabindex="-1"
+     aria-labelledby="staticBackdropLabel" aria-hidden="true">
 
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="staticBackdropLabel" th:text="${title}">Modal title</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-
-                <span th:replace="${reg_form}">...</span>
-
-
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="staticBackdropLabel" th:text="${title}">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
 
-            </div>
+            <span th:replace="${reg_form}">...</span>
+
+
+        </div>
 
     </div>
+
+</div>
