--- a/src/main/resources/templates/trainerusers.html
+++ b/src/main/resources/templates/trainerusers.html
@@ -6,13 +6,15 @@
 <div th:replace="fragments/modal :: modal(~{::#reg_form},'Dodawanie nowego prowadzącego')">
     <div id="reg_form">
         <div class="form">
-            <form class="needs-validation" novalidate method="post" th:action="@{/trainerusers}" th:object="${trainerUserDto}">
+            <form class="needs-validation" novalidate method="post" th:action="@{/trainerusers}"
+                  th:object="${trainerUserDto}">
                 <div class="modal-body">
 
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label" for="loginInput">Nazwa użtkownika:</label>
                         <div class="col-sm-8">
-                            <input class="form-control" id="loginInput" type="text" th:field="*{login}" th:required="required">
+                            <input class="form-control" id="loginInput" type="text" th:field="*{login}"
+                                   th:required="required">
                             <div class="invalid-feedback">
                                 Wprowadź nazwę użytkownika.
                             </div>
@@ -21,7 +23,8 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label" for="passwordInput">Hasło:</label>
                         <div class="col-sm-8">
-                            <input class="form-control" id="passwordInput" type="password" th:field="*{password}" th:required="required">
+                            <input class="form-control" id="passwordInput" type="password" th:field="*{password}"
+                                   th:required="required">
                             <div class="invalid-feedback">
                                 Wprowadź hasło.
                             </div>
@@ -30,7 +33,8 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label" for="firstNameInput">Imię:</label>
                         <div class="col-sm-8">
-                            <input class="form-control" id="firstNameInput" type="text" th:field="*{firstName}" th:required="required">
+                            <input class="form-control" id="firstNameInput" type="text" th:field="*{firstName}"
+                                   th:required="required">
                             <div class="invalid-feedback">
                                 Wprowadź imię.
                             </div>
@@ -98,10 +102,10 @@
             <th scope="row" th:text="${trainerUser.userTypeDescription}"></th>
             <th scope="row" class="listOfActions">
                 <ul>
-<!--
-                    <li><a class="btn btn-outline-success btn-sm"
-                           th:href="@{/trainerusers/{id}/delete(id=${trainerUser.id})}">Zmień hasło</a></li>
--->
+                    <!--
+                                        <li><a class="btn btn-outline-success btn-sm"
+                                               th:href="@{/trainerusers/{id}/delete(id=${trainerUser.id})}">Zmień hasło</a></li>
+                    -->
                     <li><a class="btn btn-outline-danger btn-sm"
                            th:href="@{/trainerusers/delete/{id}(id=${trainerUser.id})}">Usuń</a></li>
                 </ul>
